# sweep_the_backend

./: SweepTheBackend.cabal  config.json  start_ghcid.sh  test-get-schedule.sh  test-set-schedule.sh
app/: Main.hs  SweepConfig.hs
