cabal-version:      3.0
name:               SweepTheBackend
version:            0.1.0.0
synopsis:           Backend server for sweeptheleg
homepage:           http://sweeptheleg.club
license:            NONE
author:             Johan Yngman
maintainer:         johan.yngman@gmail.com
extra-source-files: CHANGELOG.md

executable SweepTheBackend
    main-is:          Main.hs
    -- other-extensions: DataKinds,
    --                   TypeOperators,
    --                   OverloadedStrings
    other-modules:    SweepConfig
    build-depends:    base ^>=4.18.1.0,
                      servant ==0.20,
                      servant-server ==0.20,
                      text ==2.0.2,
                      warp ==3.3.29,
                      aeson ==2.1.2.1,
                      bytestring ==0.11.5.2,
                      wai ==3.2.3,
                      http-types ==0.12.3,
                      filepath ==1.4.100.4,
                      websockets ==0.12.7.3,
                      async ==2.2.4
    hs-source-dirs:   app
    default-language: GHC2021
